--- a/dy-sale/src/app/core/authentication/sigin/sigin.component.html
+++ b/dy-sale/src/app/core/authentication/sigin/sigin.component.html
@@ -1,1 +1,36 @@
-<p>sigin works!</p>
+<div class="grid-container">
+    <div class="login">
+        <mat-card class="example-card">
+            <mat-card-header style="text-align: center;">
+                Login
+            </mat-card-header>
+            <br>
+            <mat-card-content>
+                <form class="example-form">
+                    <mat-form-field class="example-full-width">
+                      <mat-label>Correo</mat-label>
+                      <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                             placeholder="Ex. pat@example.com">
+                      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                        Porfavor ingresar un correo correcto
+                      </mat-error>
+                      <mat-error *ngIf="emailFormControl.hasError('required')">
+                        El correo es <strong>necesario</strong>
+                      </mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Clave</mat-label>
+                        <input type="password" matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+                        <mat-error *ngIf="emailFormControl.hasError('required')">
+                          La clave es <strong>requerida</strong>
+                        </mat-error>
+                      </mat-form-field>
+                  </form>
+                  
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-raised-button color="primary">Ingresar</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+  </div>
