add order and products component

--- a/dy-sale/src/app/view/layout/main-layout/main-layout.component.html
+++ b/dy-sale/src/app/view/layout/main-layout/main-layout.component.html
@@ -1,1 +1,19 @@
+<p>
+    <mat-toolbar color="primary">
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>pending_actions</mat-icon>
+          <span>Pedidos</span>
+        </button>
+        <button mat-menu-item >
+          <mat-icon>shopping_cart</mat-icon>
+          <span>Productos</span>
+        </button>
+      </mat-menu>
+      <span>Delcicias de la yoya</span>
+    </mat-toolbar>
+</p>
 <router-outlet></router-outlet>
