--- a/dy-sale/src/app/view/pages/orders/component/orders.component.html
+++ b/dy-sale/src/app/view/pages/orders/component/orders.component.html
@@ -1,1 +1,15 @@
-<p>orders works!</p>
+<div class="grid-container">
+    <div class="order-header">
+        <label>Ordenes</label>
+    </div>
+    <div class="orders">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<div class="container">
+    <div class="btn-holder">
+        <button mat-fab color="primary">
+            <mat-icon>add</mat-icon>
+        </button>
+    </div>
+</div>
