--- a/dy-sale/src/app/view/pages/orders/component/orders.component.html
+++ b/dy-sale/src/app/view/pages/orders/component/orders.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
     <div class="order-header">
-        <label>Ordenes</label>
+        <h2>Pedidos</h2>
     </div>
     <div class="orders">
         <router-outlet></router-outlet>
