--- a/dy-sale/src/app/view/pages/orders/fragment/order-list/order-list.component.html
+++ b/dy-sale/src/app/view/pages/orders/fragment/order-list/order-list.component.html
@@ -3,28 +3,28 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell style="cursor: default;" *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
   
     <!-- Weight Column -->
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef> Entrega </th>
-      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+      <td mat-cell style="cursor: default;" *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="delivery">
       <th mat-header-cell *matHeaderCellDef> Delivery </th>
-      <td mat-cell *matCellDef="let element">
-          <mat-icon *ngIf="element.delivery" aria-hidden="false" aria-label="Example home icon">check</mat-icon>
-          <mat-icon *ngIf="!element.delivery" aria-hidden="false" aria-label="Example home icon">close</mat-icon>
+      <td mat-cell *matCellDef="let element" style="text-align: center;">
+          <mat-icon *ngIf="element.delivery" style="cursor: default; color: green;" aria-hidden="false" aria-label="Example home icon">check</mat-icon>
+          <mat-icon *ngIf="!element.delivery" style="cursor: default; color: red;" aria-hidden="false" aria-label="Example home icon">close</mat-icon>
       </td>
     </ng-container>
     <!-- get information -->
     <ng-container  matColumnDef="info">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element" style="text-align: right;"> 
-            <mat-icon aria-hidden="false" aria-label="Example home icon">info</mat-icon>
+            <mat-icon aria-hidden="false" style="cursor: pointer; color: orange;" aria-label="Example home icon">info</mat-icon>
         </td>
       </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
