add create order

--- a/dy-sale/src/app/view/pages/orders/component/orders.component.html
+++ b/dy-sale/src/app/view/pages/orders/component/orders.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="container">
     <div class="btn-holder">
-        <button mat-fab color="primary" [disabled]="true" routerLink="/orders/create">
+        <button mat-fab color="primary" [disabled]="false" routerLink="/orders/create">
             <mat-icon>add</mat-icon>
         </button>
     </div>
