--- a/dy-sale/src/app/view/pages/orders/fragments/order-create/order-create.component.scss
+++ b/dy-sale/src/app/view/pages/orders/fragments/order-create/order-create.component.scss
@@ -1,6 +1,10 @@
 .example-form-field {
     width: 100%;
 }
+.example-form-field-select {
+  width: 70%;
+}
+
 .example-form-field-add-remove {
   width: 100%;
   margin-bottom: 10px;
