add create/edit product

--- a/dy-sale/src/app/view/layout/main-layout/main-layout.component.html
+++ b/dy-sale/src/app/view/layout/main-layout/main-layout.component.html
@@ -12,7 +12,7 @@
           <mat-icon>pending_actions</mat-icon>
           <span>Pedidos</span>
         </button>
-        <button mat-menu-item routerLink="/products" routerLinkActive="active">
+        <button mat-menu-item routerLink="/products/list" routerLinkActive="active">
           <mat-icon>shopping_cart</mat-icon>
           <span>Productos</span>
         </button>
