--- a/dy-sale/src/app/view/pages/orders/fragments/order-create/order-create.component.html
+++ b/dy-sale/src/app/view/pages/orders/fragments/order-create/order-create.component.html
@@ -45,7 +45,7 @@
             </mat-form-field>
             <mat-form-field class="example-form-field">
                 <mat-label>Cantidad</mat-label>
-                <input matInput type="text" formControlName="count">
+                <input matInput type="number" formControlName="count">
             </mat-form-field>
             <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
                 <form [formGroup]="addProduct">
