--- a/dy-sale/src/app/view/pages/orders/fragments/order-list/order-list.component.html
+++ b/dy-sale/src/app/view/pages/orders/fragments/order-list/order-list.component.html
@@ -31,4 +31,10 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   
-  
+  <button (click)="increment()">Increment</button>
+
+<div>Current Count: {{ count$ | async }}</div>
+
+<button (click)="decrement()">Decrement</button>
+
+<button (click)="reset()">Reset Counter</button>
